# ai-genai-llm-evaluations

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
config/: settings.test.yaml  settings.yaml
src/: __init__.py
src/evaluators/: __init__.py  answer_relevancy.py  base_evaluator.py  bias.py  contextual_relevancy.py  faithfulness.py  hallucination.py  toxicity.py
src/models/: __init__.py  evaluation_result.py  test_case.py
src/runners/: __init__.py  evaluation_runner.py
src/utils/: __init__.py  config_loader.py  logger.py
tests/: __init__.py
tests/integration/: test_deepeval_integration.py
tests/unit/: test_config_loader.py  test_evaluation_runner.py  test_evaluators.py  test_models.py
